ch ch ch changes

--- a/_imports/header.html
+++ b/_imports/header.html
@@ -1,7 +1,13 @@
-<header role="banner">
-  <nav class="wrapper">
-    <a href="/">Home</a>
-    <a href="/other/">Another page</a>
-    <a href="/template/">A template page</a>
-  </nav>
+<header role="banner" class="header">
+    <div class="constrain constrain--large pad">
+        <nav class="nav">
+            <sergey-link class="nav-link-logo" to="/">Self Treat</sergey-link>
+            <sergey-link class="nav-link" to="/why.html">Why</sergey-link>
+            <sergey-link class="nav-link" to="/what.html">What</sergey-link>
+            <sergey-link class="nav-link" to="/how.html">How</sergey-link>
+            <sergey-link class="nav-link" to="/team.html">Team</sergey-link>
+            <!-- <a href="/template/">A template page</a> -->
+        </nav>
+        <sergey-slot></sergey-slot>
+    </div>
 </header>
