--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="constrain constrain--medium col-two pad-btm">
                     <figure>
                         <img
-                            src="http://placeimg.com/640/640/tech"
+                            src="https://placeimg.com/640/640/tech"
                             alt="Image alt text"
                         />
                     </figure>
@@ -85,7 +85,7 @@
                     </div>
                     <figure>
                         <img
-                            src="http://placeimg.com/640/400/tech"
+                            src="https://placeimg.com/640/400/tech"
                             alt="Image alt text"
                         />
                     </figure>
@@ -96,7 +96,7 @@
                     <figure>
                         <img
                             class="full-width"
-                            src="http://placeimg.com/900/500/tech"
+                            src="https://placeimg.com/900/500/tech"
                             alt="Image alt text"
                         />
                     </figure>
