--- a/prose.html
+++ b/prose.html
@@ -107,7 +107,7 @@
 
             <figure>
                 <img
-                    src="http://placekitten.com/420/420"
+                    src="https://placekitten.com/420/420"
                     alt="Image alt text"
                 />
             </figure>
