--- a/why.html
+++ b/why.html
@@ -22,7 +22,7 @@
                 </div>
                 <figure class="hero-img">
                     <img
-                        src="http://placeimg.com/640/400/tech"
+                        src="https://placeimg.com/640/400/tech"
                         alt="Image alt text"
                     />
                 </figure>
