--- a/_imports/head.html
+++ b/_imports/head.html
@@ -1,12 +1,11 @@
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <link
-        href="https://fonts.googleapis.com/css?family=Karla:700&display=swap"
-        rel="stylesheet"
-    />
-    <sergey-slot>
-        <title>Sergey example website (default title)</title>
-    </sergey-slot>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Karla:700&display=swap"
+    rel="stylesheet"
+  />
+  
+  <title><sergey-slot /> | Self Treat</title>
 </head>
