--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <sergey-import src="head" />
+    <sergey-import src="head">Home</sergey-import>
+    
     <body>
         <sergey-import src="header">
             <div class="hero">
