--- a/team.html
+++ b/team.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <sergey-import src="head">
-        <title>A different title</title>
-    </sergey-import>
+    <sergey-import src="head">Team</sergey-import>
 
     <body>
         <sergey-import src="header" />
