--- a/what.html
+++ b/what.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <sergey-import src="head">
-        <title>A different title</title>
-    </sergey-import>
+    <sergey-import src="head">What</sergey-import>
 
     <body>
         <sergey-import src="header"> </sergey-import>
@@ -347,6 +345,6 @@
         </main>
 
         <sergey-import src="footer" />
+        <script src="/assets/js/main.js"></script>
     </body>
-    <script src="/assets/js/main.js"></script>
 </html>
