--- a/what.html
+++ b/what.html
@@ -69,10 +69,13 @@
 
                             <ol class="flow-half">
                                 <li class="flow-item">
-                                    <img
-                                        class="flow-img"
-                                        src="assets/images/card.jpg"
-                                    />
+                                    <figure class="flow-img-container">
+                                        <img
+                                            class="flow-img"
+                                            src="assets/images/card.jpg"
+                                            alt="How to treat your indigestion pharmacy card"
+                                        />
+                                    </figure>
                                     <div>
                                         <h5>Pharmacy</h5>
                                         <p>
