--- a/_imports/head.html
+++ b/_imports/head.html
@@ -6,6 +6,24 @@
     href="https://fonts.googleapis.com/css?family=Karla:700&display=swap"
     rel="stylesheet"
   />
-  
+
+  <meta property="og:url" content="https://selftreat.co.uk" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="<sergey-slot /> | Self Treat" />
+  <meta
+    property="og:image"
+    content="https://selftreat.co.uk/assets/images/open-graph.jpg"
+  />
+  <meta property="og:image:alt" content="Self Treat" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="<sergey-slot /> | Self Treat" />
+  <meta name="description" content="" />
+  <meta property="og:description" content="" />
+  <meta name="twitter:description" content="" />
+  <meta
+    name="twitter:image"
+    content="https://selftreat.co.uk/assets/images/open-graph.jpg"
+  />
+
   <title><sergey-slot /> | Self Treat</title>
 </head>
