Home page updates

--- a/how.html
+++ b/how.html
@@ -6,11 +6,11 @@
     <sergey-import src="header">
       <div class="hero">
         <div class="hero-intro">
-          <h1 class="underline--animated">How</h1>
+          <h1 class="underline--animated">Process</h1>
           <p class="intro"></p>
         </div>
         <figure class="hero-img">
-          <img src="https://placeimg.com/640/400/tech" alt="Image alt text" />
+          <img src="/assets/images/storyboarding.jpg" alt="Image alt text" />
         </figure>
       </div>
     </sergey-import>
