--- a/how.html
+++ b/how.html
@@ -7,7 +7,13 @@
       <div class="hero">
         <div class="hero-intro">
           <h1 class="underline--animated">Process</h1>
-          <p class="intro"></p>
+          <p class="intro">
+            A broad problem space and fixed project term required us to work in
+            an agile way, facilitated by daily standups, weekly sprint planning
+            and retros. Design thinking approaches helped us navigate from
+            research through to design and communication. Here we share some of
+            the key methods we used throughout the process.
+          </p>
         </div>
         <figure class="hero-img">
           <img src="/assets/images/storyboarding.jpg" alt="Image alt text" />
@@ -359,7 +365,7 @@
               </p>
             </div>
             <figure>
-              <img src="assets/images/storyboarding.jpg" alt="" />
+              <img src="assets/images/storyboarding-film.jpg" alt="" />
             </figure>
           </div>
 
@@ -380,7 +386,7 @@
               </p>
             </div>
             <figure>
-              <img src="assets/images/shooting.jpg" alt="" />
+              <img src="assets/images/deciding-on-the-outcome.jpg" alt="" />
             </figure>
           </div>
         </div>
