--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
       <div class="hero">
         <div class="hero-intro">
           <h1 class="underline--animated">Self Treat</h1>
-          <p>
-            Sociis natoque penatibus et magnis dis parturient montes, nascetur
-            ridiculus mus. Duis mollis, est non commodo luctus, nisi erat
-            porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper
-            nulla non metus auctor fringilla. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit.
+          <p class="intro">
+            Clearleft runs a 3 month intern programme every few years.
+            <a
+              href="https://clearleft.com/posts/our-intern-program-is-returning-for-2019"
+              >This&nbsp;year</a
+            >, Clearleft set the 2019 team the challenge of helping the NHS
+            <q>Do more with less</q>.
+            <strong
+              >Self Treat is a vision piece designed to increase self-management
+              of minor health conditions.</strong
+            >
           </p>
         </div>
       </div>
