--- a/why.html
+++ b/why.html
@@ -8,12 +8,11 @@
         <div class="hero-intro">
           <h1 class="underline--animated">Why self-care</h1>
           <p class="intro">
-            Clearleft runs a 3 month intern programme every few years.
-            <a
-              href="https://clearleft.com/posts/our-intern-program-is-returning-for-2019"
-              >This year</a
-            >, Clearleft set the 2019 team the challenge of helping the NHS
-            <q>Do more with less.</q>
+            We think self-care is an underserved design challenge. And we were
+            convinced by our research that there was an opportunity to solve a
+            real problem. Technology is making behavior change easier and by
+            focusing on this area we aimed to have an outcome that would serve
+            both the GP surgery and patients.
           </p>
         </div>
         <figure class="hero-img">
