--- a/_imports/head.html
+++ b/_imports/head.html
@@ -17,9 +17,24 @@
   <meta property="og:image:alt" content="Self Treat" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="<sergey-slot /> | Self Treat" />
-  <meta name="description" content="" />
-  <meta property="og:description" content="" />
-  <meta name="twitter:description" content="" />
+  <meta
+    name="description"
+    content="We think self-care is an underserved design challenge. And we were
+            convinced by our research that there was an opportunity to solve a
+            real problem."
+  />
+  <meta
+    property="og:description"
+    content="We think self-care is an underserved design challenge. And we were
+            convinced by our research that there was an opportunity to solve a
+            real problem."
+  />
+  <meta
+    name="twitter:description"
+    content="We think self-care is an underserved design challenge. And we were
+            convinced by our research that there was an opportunity to solve a
+            real problem."
+  />
   <meta
     name="twitter:image"
     content="https://selftreat.co.uk/assets/images/open-graph.jpg"
