Video and line length

--- a/what.html
+++ b/what.html
@@ -10,7 +10,7 @@
         <div class="pad">
           <h1 class="underline--animated">Experience Journey</h1>
           <p class="intro">
-            The concept is a web-app and service design created to work in
+            The concept is a web-app and service design, created to work in
             tandem and integrated into a GP practice. Here we walk you through
             the vision of the solution from the patients’ perspective.
           </p>
@@ -26,9 +26,10 @@
               <p>
                 A third of people end up at their GP surgeries for conditions
                 they could treat themselves because they want to check it’s not
-                more serious or because they think it’s gone on too long. People
-                care about ‘saving the NHS’ and recognise responsibility for
-                their health, however often this doesn’t translate into action.
+                more serious or because they think it’s gone on for too long.
+                People care about ‘saving the NHS’ and recognise responsibility
+                for their health, however often this doesn’t translate into
+                action.
               </p>
               <p>
                 Using existing behaviour, Self Treat is delivered to these
@@ -83,8 +84,8 @@
                       Although half of us go online, mainly to find treatment.
                       One way people are directed to Self Treat is via a
                       pharmacy condition card alongside your medication. This
-                      gives crucial information regarding timelines and red
-                      flags into the hands of people who are unwell.
+                      gives crucial information regarding timeline and red flags
+                      into the hands of people who are unwell.
                     </p>
                     <p>
                       It uses the trust people put in pharmacist staff to
@@ -159,7 +160,7 @@
                 recommendations to avoid alcohol if you don’t drink, or lose
                 weight if you’re weight is healthy. You might also feel like
                 your experience of the condition might be different due to
-                various reasons so the app, pays attention to descriptions of
+                various reasons, so the app, pays attention to descriptions of
                 symptoms to be clear on what feels ‘normal’.
               </p>
               <p>
@@ -191,12 +192,10 @@
                 to form a new habit, right?
               </p>
               <p>
-                Self-treatment isn’t any different, requiring medication and
-                lifestyle changes to get better. But we know people don’t like
-                endless reminders. So we believe in a happy medium: a daily,
-                timely reminder based on you self-treatment prescription,
-                prompting to pay attention to triggers, or generally to take
-                care of yourself.
+                But we know people don’t like endless reminders. So we believe
+                in a happy medium: a daily, timely reminder based on you
+                self-treatment prescription, prompting to pay attention to
+                triggers, or generally to take care of yourself.
               </p>
             </div>
             <div class="mockup-container">
@@ -210,7 +209,7 @@
 
           <li class="flow-item flow-item--flex">
             <div>
-              <h5>Evening check-in’s</h5>
+              <h5>Evening check ins</h5>
               <p>
                 It’s common to not be able to remember when you had symptoms,
                 what you tried, and what could have been the trigger.
@@ -221,9 +220,9 @@
               </p>
 
               <p>
-                Self Treat sends an evening check in during your illness of
+                Self Treat sends an evening check in during your illness or
                 period of recurring symptoms to ask ‘Have you had indigestion
-                today?. If you have, spending less than a minute noting any of
+                today? If you have, spending less than a minute noting any of
                 the possible condition triggers builds a history.
               </p>
             </div>
