--- a/why.html
+++ b/why.html
@@ -61,10 +61,10 @@
           </p>
           <p>
             We saw this as a fascinating, and underserved design problem. We
-            live in an age of information, and the NHS provides carefully
-            curated advice on health conditions. But how could we design to
-            increase self-treatment, and reduce GP visits for minor conditions?
-            This was the focus for our project.
+            live in an age of information, and the NHS provides carefully worded
+            advice on health conditions. But how could we design to increase
+            self-treatment, and reduce GP visits for minor conditions? This was
+            the focus for our project.
           </p>
         </div>
       </section>
