Lead line length

--- a/_imports/header.html
+++ b/_imports/header.html
@@ -1,12 +1,12 @@
 <header role="banner" class="header">
-    <div class="constrain constrain--large pad">
-        <nav class="nav">
-            <sergey-link class="nav-link-logo" to="/">Self Treat</sergey-link>
-            <sergey-link class="nav-link" to="/why.html">Why</sergey-link>
-            <sergey-link class="nav-link" to="/what.html">What</sergey-link>
-            <sergey-link class="nav-link" to="/how.html">How</sergey-link>
-            <sergey-link class="nav-link" to="/team.html">Team</sergey-link>
-        </nav>
-        <sergey-slot></sergey-slot>
-    </div>
+  <div class="constrain constrain--large pad">
+    <nav class="nav">
+      <sergey-link class="nav-link-logo" to="/">Self Treat</sergey-link>
+      <sergey-link class="nav-link" to="/why/">Why</sergey-link>
+      <sergey-link class="nav-link" to="/what/">What</sergey-link>
+      <sergey-link class="nav-link" to="/how/">How</sergey-link>
+      <sergey-link class="nav-link" to="/team/">Team</sergey-link>
+    </nav>
+    <sergey-slot />
+  </div>
 </header>
