--- a/how/index.html
+++ b/how/index.html
@@ -105,7 +105,7 @@
               </div>
               <figure>
                 <img
-                  src="assets/images/reviewing-existing-research.jpg"
+                  src="/assets/images/reviewing-existing-research.jpg"
                   alt="Image alt text"
                 />
               </figure>
@@ -188,7 +188,7 @@
 
           <figure class="pad-top">
             <img
-              src="assets/images/experience-map.jpg"
+              src="/assets/images/experience-map.jpg"
               alt="The patient journey experience map"
             />
           </figure>
@@ -223,7 +223,7 @@
                 </p>
               </div>
               <figure>
-                <img src="assets/images/design-studio.jpg" alt="" />
+                <img src="/assets/images/design-studio.jpg" alt="" />
               </figure>
             </div>
 
@@ -247,7 +247,7 @@
                 </p>
               </div>
               <figure>
-                <img src="assets/images/concept-clarification.jpg" alt="" />
+                <img src="/assets/images/concept-clarification.jpg" alt="" />
               </figure>
             </div>
 
@@ -269,7 +269,7 @@
                 </p>
               </div>
               <figure>
-                <img src="assets/images/before-storyboarding.jpg" alt="" />
+                <img src="/assets/images/before-storyboarding.jpg" alt="" />
               </figure>
             </div>
 
@@ -294,7 +294,7 @@
                 </p>
               </div>
               <figure>
-                <img src="assets/images/final-concept.jpg" alt="" />
+                <img src="/assets/images/final-concept.jpg" alt="" />
               </figure>
             </div>
           </div>
@@ -319,10 +319,10 @@
                 <h5 class="lead">Testing</h5>
                 <p>
                   We used guerrilla concept testing to understand how people
-                  interacted with the pharmacy card, a key part of the
-                  Self-Treat service. Using a scenario we were able to get
-                  feedback on how the card was received and what people would
-                  expect to see when scanning the QR code.
+                  interacted with the pharmacy card, a key part of the Self
+                  Treat service. Using a scenario we were able to get feedback
+                  on how the card was received and what people would expect to
+                  see when scanning the QR code.
                 </p>
                 <p>
                   Time constraints meant our testing was limited. Should this
@@ -332,7 +332,7 @@
                 </p>
               </div>
               <figure>
-                <img src="assets/images/concept-testing.jpg" alt="" />
+                <img src="/assets/images/concept-testing.jpg" alt="" />
               </figure>
             </div>
           </div>
@@ -365,7 +365,7 @@
               </p>
             </div>
             <figure>
-              <img src="assets/images/storyboarding-film.jpg" alt="" />
+              <img src="/assets/images/storyboarding-film.jpg" alt="" />
             </figure>
           </div>
 
@@ -386,7 +386,7 @@
               </p>
             </div>
             <figure>
-              <img src="assets/images/deciding-on-the-outcome.jpg" alt="" />
+              <img src="/assets/images/deciding-on-the-outcome.jpg" alt="" />
             </figure>
           </div>
         </div>
