--- a/team/index.html
+++ b/team/index.html
@@ -12,7 +12,7 @@
         <ul class="team-members">
           <li class="team-member">
             <figure class="team-image">
-              <img src="assets/images/holly.jpg" alt="Image alt text" />
+              <img src="/assets/images/holly.jpg" alt="Image alt text" />
             </figure>
             <h4 class="team-name">Holly</h4>
             <div class="contact">
@@ -66,7 +66,7 @@
 
           <li class="team-member">
             <figure class="team-image">
-              <img src="assets/images/lacin.jpg" alt="Image alt text" />
+              <img src="/assets/images/lacin.jpg" alt="Image alt text" />
             </figure>
             <h4 class="team-name">Lacin</h4>
             <div class="contact">
@@ -118,7 +118,7 @@
 
           <li class="team-member">
             <figure class="team-image">
-              <img src="assets/images/beyza.jpg" alt="Image alt text" />
+              <img src="/assets/images/beyza.jpg" alt="Image alt text" />
             </figure>
             <h4 class="team-name">Beyza</h4>
             <div class="contact">
