--- a/what/index.html
+++ b/what/index.html
@@ -3,7 +3,7 @@
   <sergey-import src="head">What</sergey-import>
 
   <body>
-    <sergey-import src="header"> </sergey-import>
+    <sergey-import src="header" />
 
     <main class="constrain constrain--large what">
       <section>
@@ -69,7 +69,7 @@
                   <figure class="flow-img-container">
                     <img
                       class="flow-img"
-                      src="assets/images/card.jpg"
+                      src="/assets/images/card.jpg"
                       alt="How to treat your indigestion pharmacy card"
                     />
                   </figure>
@@ -145,7 +145,7 @@
             <div class="mockup-container">
               <div class="mockup">
                 <div class="mockup-scroll">
-                  <img class="mockup-img" src="assets/images/final.jpg" />
+                  <img class="mockup-img" src="/assets/images/final.jpg" />
                 </div>
               </div>
             </div>
@@ -178,7 +178,10 @@
             <div class="mockup-container">
               <div class="mockup">
                 <div class="mockup-scroll">
-                  <img class="mockup-img" src="assets/images/indigestion.jpg" />
+                  <img
+                    class="mockup-img"
+                    src="/assets/images/indigestion.jpg"
+                  />
                 </div>
               </div>
             </div>
@@ -201,7 +204,7 @@
             <div class="mockup-container">
               <div class="mockup">
                 <div class="mockup-scroll-disable">
-                  <img class="mockup-img" src="assets/images/self-treat.jpg" />
+                  <img class="mockup-img" src="/assets/images/self-treat.jpg" />
                 </div>
               </div>
             </div>
@@ -229,7 +232,7 @@
             <div class="mockup-container">
               <div class="mockup">
                 <div class="mockup-scroll-disable">
-                  <img class="mockup-img" src="assets/images/evening.jpg" />
+                  <img class="mockup-img" src="/assets/images/evening.jpg" />
                 </div>
               </div>
             </div>
@@ -261,7 +264,7 @@
             <div class="mockup-container">
               <div class="mockup">
                 <div class="mockup-scroll-disable">
-                  <img class="mockup-img" src="assets/images/history.jpg" />
+                  <img class="mockup-img" src="/assets/images/history.jpg" />
                 </div>
               </div>
             </div>
