Fix the incorrect links

--- a/team/index.html
+++ b/team/index.html
@@ -184,10 +184,7 @@
             design capability and transform your organisation.
           </p>
           <div class="contact">
-            <a
-              href="https://www.linkedin.com/in/holly-wakefield/"
-              class="contact-link"
-            >
+            <a href="https://twitter.com/clearleft" class="contact-link">
               <svg
                 class="contact-svg"
                 aria-hidden="true"
@@ -201,7 +198,7 @@
               </svg>
               Twitter
             </a>
-            <a href="mailto:hwakefield33@gmail.com " class="contact-link">
+            <a href="https://clearleft.com/posts/" class="contact-link">
               Visit our blog
             </a>
           </div>
