--- a/how/index.html
+++ b/how/index.html
@@ -60,7 +60,7 @@
             <p class="lead">
               Using existing research was crucial to our work in getting to know
               the wider primary healthcare space as well as more thoroughly
-              understand the self-care landscape.
+              understanding the self-care landscape.
             </p>
             <div class="col-two">
               <div class="pad-sm">
@@ -165,7 +165,7 @@
               </p>
               <p>
                 Research shows that people under 65 generally believe in being
-                responsible with NHS resource, however it also shows a mismatch
+                responsible with NHS resources, however it also shows a mismatch
                 between this attitude and behavior. Many people don’t understand
                 the term self-care. This creates a barrier between the health
                 professionals and the patients.
@@ -243,7 +243,7 @@
                 <p>
                   Using this feedback and discussions with Dr Sheppard we
                   aggregated self-prescription and integrated self-care into a
-                  single concept to design for.
+                  single concept to start designing.
                 </p>
               </div>
               <figure>
@@ -255,11 +255,12 @@
               <div>
                 <h5 class="lead">Storyboarding</h5>
                 <p>
-                  As we analysed the research findings personas formed of shared
-                  characteristics, behaviors and beliefs towards the NHS. Using
-                  the three patient personas - Proactive, Worried Well and Stoic
-                  - we sketched their journeys when unwell, and interaction with
-                  services, to build empathy and really understand their needs.
+                  As we analysed the research findings, personas formed of
+                  shared characteristics, behaviors and beliefs towards the NHS.
+                  Using the three patient personas - Proactive, Worried Well and
+                  Stoic - we sketched their journeys when unwell, and
+                  interaction with services, to build empathy and really
+                  understand their needs.
                 </p>
                 <p>
                   After storyboarding, using different coloured flash cards for
@@ -287,10 +288,10 @@
                 <p>
                   Discussions with developers helped clarify technical
                   constraints and options for delivery. We were also aware that
-                  we didn’t want to create barriers to the solution with the
-                  requirement to download a native app. As a result we decided
-                  on a progressive web app to deliver the digital element of the
-                  service.
+                  we didn’t want to create barriers to the solution by
+                  introducting the requirement to download a native app. As a
+                  result we decided on a progressive web app to deliver the
+                  digital element of the service.
                 </p>
               </div>
               <figure>
@@ -346,7 +347,7 @@
             <h4>Deciding on the outcome</h4>
             <p class="lead">
               Due to the scale and complex nature of our concept and limited
-              time we have left we decided to make a film to communicate the
+              time we had left we decided to make a film to communicate the
               vision of the project.
             </p>
           </div>
@@ -357,7 +358,7 @@
               <p>
                 Aware that the result of the project was a high level vision we
                 knew that telling the story of how things are now, and how they
-                could be was crucial to communicating the value. Sketching the
+                could be, was crucial to communicating the value. Sketching the
                 flow of scenes needed to share this idea was invaluable, and
                 gave us the base from which to add text to aid our storytelling.
                 It also helped us develop only the necessary prototype screens
