--- a/what/index.html
+++ b/what/index.html
@@ -18,7 +18,7 @@
         <ol class="flow pad-lg">
           <li class="flow-item flow-item--first">
             <div>
-              <h5>Being unwell</h5>
+              <h4>Being unwell</h4>
               <p>
                 Most people get minor illnesses from time to time, and sometimes
                 more often.
@@ -32,9 +32,8 @@
                 action.
               </p>
               <p>
-                Using existing behaviour, Self Treat is delivered to these
-                people who seek medical help through pharmacy card, calls to the
-                GP surgery and self referral.
+                Using existing behaviour, Self Treat is made available to people
+                who seek help from pharmacies, GPs, or by self-referral.
               </p>
             </div>
           </li>
@@ -43,7 +42,7 @@
             <div class="flow flow--cols">
               <ol class="flow-half">
                 <li class="flow-item">
-                  <h5>GP</h5>
+                  <h4>GP</h4>
                   <p>
                     Patients need easy to reach, trusted support and
                     encouragement to self-care. Self Treat provides this with a
@@ -74,7 +73,7 @@
                     />
                   </figure>
                   <div>
-                    <h5>Pharmacy</h5>
+                    <h4>Pharmacy</h4>
                     <p>
                       About a third of us go to the pharmacy when unwell. We’ll
                       often have a chat with a staff member or pharmacist, and
@@ -103,7 +102,7 @@
 
           <li class="flow-item flow-item--flex">
             <div>
-              <h5>Self referral</h5>
+              <h4>Self referral</h4>
               <p>
                 One of the ultimate aims of this project is to give confidence
                 to patients in treating minor conditions themselves by using
@@ -114,7 +113,7 @@
 
           <li class="flow-item flow-item--flex">
             <div>
-              <h5>Triggers</h5>
+              <h4>Triggers</h4>
               <p>
                 Information online can be overwhelming and contradictory. If
                 people access the NHS website they find well worded, clear
@@ -136,10 +135,10 @@
                 manageable changes in their lifestyle.
               </p>
               <p>
-                The data is fed into History enabling more clarity on when and
-                how severe symptoms occurred. Symptoms to watch out for are
-                clear on the landing page as absence of these concerning
-                symptoms will help users feel reassured.
+                The data is captured, enabling more clarity on when and how
+                severe symptoms occurred. Symptoms to watch out for are clear on
+                the landing page as absence of these concerning symptoms will
+                help users feel reassured.
               </p>
             </div>
             <div class="mockup-container">
@@ -153,7 +152,7 @@
 
           <li class="flow-item flow-item--flex">
             <div>
-              <h5>Treatment</h5>
+              <h4>Treatment</h4>
               <p>
                 Self Treat gives you relevant treatment advice. For example by
                 adding triggers, treatment becomes tailored. No more
@@ -164,9 +163,8 @@
                 symptoms to be clear on what feels ‘normal’.
               </p>
               <p>
-                Using the trusted NHS advice into a “self-treat prescription”
-                Self Treat, delivers less overwhelming advice, and turns them
-                into more personalised actions.
+                Using trusted NHS content, Self Treat delivers an easy-to-digest
+                “prescription”, personalised to you.
               </p>
               <p>
                 One of the key aspects of Self Treat is that it gives you a
@@ -189,14 +187,14 @@
 
           <li class="flow-item flow-item--flex">
             <div>
-              <h5>Self-treat reminders</h5>
+              <h4>Self-treat reminders</h4>
               <p>
                 We all know that changing our routine is easy to forget. 30 days
                 to form a new habit, right?
               </p>
               <p>
                 But we know people don’t like endless reminders. So we believe
-                in a happy medium: a daily, timely reminder based on you
+                in a happy medium: a daily, timely reminder based on your
                 self-treatment prescription, prompting to pay attention to
                 triggers, or generally to take care of yourself.
               </p>
@@ -212,7 +210,7 @@
 
           <li class="flow-item flow-item--flex">
             <div>
-              <h5>Evening check ins</h5>
+              <h4>Evening check-ins</h4>
               <p>
                 It’s common to not be able to remember when you had symptoms,
                 what you tried, and what could have been the trigger.
@@ -223,9 +221,9 @@
               </p>
 
               <p>
-                Self Treat sends an evening check in during your illness or
+                Self Treat sends an evening check-in during your illness or
                 period of recurring symptoms to ask ‘Have you had indigestion
-                today? If you have, spending less than a minute noting any of
+                today?‘ If you have, spending less than a minute noting any of
                 the possible condition triggers builds a history.
               </p>
             </div>
@@ -240,7 +238,7 @@
 
           <li class="flow-item flow-item--flex">
             <div>
-              <h5>History</h5>
+              <h4>History</h4>
               <p>
                 The History is the hub of insight. It allows you to look back
                 and see when, how often, and how severely you were unwell or had
