--- a/why/index.html
+++ b/why/index.html
@@ -8,11 +8,11 @@
         <div class="hero-intro">
           <h1 class="underline--animated">Why self-care</h1>
           <p class="intro">
-            We think self-care is an underserved design challenge. And we were
-            convinced by our research that there was an opportunity to solve a
-            real problem. Technology is making behavior change easier and by
-            focusing on this area we aimed to have an outcome that would serve
-            both the GP surgery and patients.
+            We think medical self-care is an underserved design challenge. And
+            we were convinced by our research that there was an opportunity to
+            solve a real problem. Technology is making behavior change easier
+            and by focusing on this area we aimed to have an outcome that would
+            serve both the GP surgery and patients.
           </p>
         </div>
         <figure class="hero-img">
@@ -60,8 +60,8 @@
             easily.
           </p>
           <p>
-            We saw this as a fascinating, and underserved design problem. We
-            live in an age of information, and the NHS provides carefully worded
+            We saw this as a fascinating and underserved design problem. We live
+            in an age of information, and the NHS provides carefully worded
             advice on health conditions. But how could we design to increase
             self-treatment, and reduce GP visits for minor conditions? This was
             the focus for our project.
