--- a/why/index.html
+++ b/why/index.html
@@ -62,9 +62,9 @@
           <p>
             We saw this as a fascinating and underserved design problem. We live
             in an age of information, and the NHS provides carefully worded
-            advice on health conditions. But how could we design to increase
-            self-treatment, and reduce GP visits for minor conditions? This was
-            the focus for our project.
+            advice on health conditions. But how could we use design to rethink
+            self-treatment support, and reduce GP visits for minor conditions?
+            This was the focus for our project.
           </p>
         </div>
       </section>
