--- a/why/index.html
+++ b/why/index.html
@@ -6,7 +6,9 @@
     <sergey-import src="header">
       <div class="hero hero--content">
         <div class="hero-intro">
-          <h1 class="underline--animated">Why self-care</h1>
+          <h1 class="underline--animated underline--animated-alt">
+            Why self-care
+          </h1>
           <p class="intro">
             We think medical self-care is an underserved design challenge. And
             we were convinced by our research that there was an opportunity to
